--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#MyIgnore
+.idea/
+
 # dependencies
 /node_modules
 /.pnp
