--- a/package.json
+++ b/package.json
@@ -79,6 +79,9 @@
     ]
   },
   "devDependencies": {
+    "reactotron-react-js": "^2.1.4",
+    "reactotron-redux": "^2.1.3",
+    "redux-devtools-extension": "^2.13.7",
     "redux-logger": "^3.0.6"
   }
 }
