--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
+    "redux-i18n": "^1.5.15",
     "redux-thunk": "^2.3.0",
+    "reset-css": "^4.0.1",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
